# MCP-MAL

./: .gitignore  CLAUDE.md  README.md  prompt_inicial.txt
front/: CLAUDE.md  README.md  docker-compose.yml
front/backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
front/backend/app/: config.py  main.py
front/backend/app/agent/: code_reviewer.py  contribution_scorer.py  daily_summary.py  graph.py  interaction_analyzer.py  next_steps.py  prompts.py  sprint_reporter.py  state.py
front/backend/app/api/: agents.py  chat.py  dashboard.py  data.py  router.py
front/backend/app/mcp/: client.py
front/backend/app/models/: schemas.py
front/backend/tests/: conftest.py  test_agent.py  test_agents.py  test_api.py
front/frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
nube/: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  package-lock.json  package.json
nube/scripts/: manage-keys.ts  onboard-dev.sh  seed-catalog.ts  setup-gcp.sh
nube/src/: constants.ts  index.ts  server.ts
nube/terraform/: cloud-armor.tf  dev.tfvars  firestore.tf  main.tf  monitoring.tf  outputs.tf  prod.tfvars  variables.tf
on-premise/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
on-premise/data/: schema.sql
on-premise/scripts/: migrate-add-projects.sql  migrate-contributions-project.sql  onboard-dev.sh  seed-bella-italia-data.sql  seed-catalog.ts  seed-full-catalog.ts  setup-local.sh
on-premise/src/: constants.ts  index.ts  server.ts  types.ts
(+178 files in other folders)
